# ninjam-clap

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  install-win.ps1  install.sh  release.sh
.github/workflows/: build.yml
docs/: CNAME  Gemfile  _config.yml  documentation.md  download.md  faq.md  features.md  index.md  integration-plan-jamwide-rename.md  main.scss  win32-text-input-fix-plan.md
docs/_layouts/: default.html
docs/assets/css/: style.scss
docs/assets/images/: .gitkeep
memory-bank/: activeContext.md  functional-design-clapNinjam.md  ninjam.code-workspace  plan-chat-room.md  plan-clapNinjamThreadingSync.md  plan-juce-port.md  plan-linux-port.md  plan-reaper-macos-input.md  plan-serverlist-ninjam-format.md  plan-visual-latency-guide.md  progress.md  systemPatterns.md  technical-design-part1-core.md  technical-design-part2-clap.md  technical-design-part3-ui.md
memory-bank/archive/: plan-clapNinjamThreadingSync.md  plan-reaper-macos-input.md  plan-visual-latency-guide.md
resources/: Info.plist.in
src/: build_number.h
src/core/: mpb.cpp  mpb.h  netmsg.cpp  netmsg.h  njclient.cpp  njclient.h  njclient_stub.cpp  njmisc.cpp  njmisc.h
src/debug/: logging.h
src/net/: server_list.cpp  server_list.h
src/platform/: gui_context.h  gui_macos.mm  gui_win32.cpp  reaper_integration.h  reaper_integration.mm
src/plugin/: clap_entry.cpp  clap_entry_export.cpp  jamwide_plugin.h  ninjam_plugin.h
src/threading/: run_thread.cpp  run_thread.h  spsc_ring.h  ui_command.h  ui_event.h
src/ui/: server_list_types.h  ui_chat.cpp  ui_chat.h  ui_connection.cpp  ui_connection.h  ui_latency_guide.cpp  ui_latency_guide.h  ui_local.cpp  ui_local.h  ui_main.cpp  ui_main.h  ui_master.cpp  ui_master.h  ui_meters.cpp  ui_meters.h  ui_remote.cpp  ui_remote.h  ui_server_browser.cpp  ui_server_browser.h  ui_state.h  ui_status.cpp  ui_status.h  ui_util.cpp  ui_util.h
tools/: check_imgui_ids.py
wdl/: MersenneTwister.h  assocarray.h  audiobuffercontainer.h  bitfield.h  chunkalloc.h  circbuf.h  convoengine.h  coreaudio_channel_formats.h  delay_line.h  denormal.h  diffcalc.h  dirscan.h  fastqueue.h  filebrowse.h  filename.h  fileread.h  filewrite.h  fnv64.h  has_strings.h  heapbuf.h  jsonparse.h  lameencdec.h  lineparse.h  mergesort.h  metadata.h  mutex.h  pcmfmtcvt.h  projectcontext.h  ptrlist.h  ptrlist_indexed.h  queue.h  resample.h  rng.cpp  rpool.h  scsrc.h  setthreadname.h  sharedpool.h  shm_connection.h  shm_msgreply.h  simple_pitchshift.h  (+21 more)
wdl/jnetlib/: asyncdns.cpp  asyncdns.h  connection.cpp  connection.h  httpserv.cpp  httpserv.h  listen.cpp  netinc.h  util.cpp  webserver.cpp  webserver.h
wdl/lice/: lice.h
